<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="bbqcreations.drinkiit.UserOrdersFragment"
    android:background="@drawable/bg_image">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/frame_title"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/txt_userorders_title"
                style="@style/title"
                android:text="@string/title_my_orders" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/frame_title"
            android:id="@+id/header"
            android:weightSum="4"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:background="@drawable/border_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.65"
                android:text="@string/lbl_date"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/lbl_commande"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.65"
                android:text="@string/lbl_total"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.65"
                android:text="@string/lbl_done"
                android:gravity="center"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lv_pending"
            android:layout_gravity="center"
            android:layout_below="@id/header"
            android:layout_above="@+id/footer"
            android:layout_margin="5sp"
            android:divider="@drawable/border_bottom"
            android:dividerHeight="2dp"
            android:paddingBottom="5sp"
            android:layout_alignParentStart="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/footer"
            android:text="Pour supprimer une commande, sélectionnez là"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:textSize="16dp"
            android:gravity="center"
            android:padding="5dp"
            android:textStyle="bold" />

    </RelativeLayout>

</FrameLayout>
