<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="bbqcreations.drinkiit.AccountFragment"
    android:background="@drawable/bg_image">

    <!-- TODO: Update blank fragment layout -->

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal|top">

        <TextView
            style="@style/title"
            android:text="@string/title_my_account"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="430sp"
        android:layout_gravity="center"
        android:background="@drawable/border_top">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="4"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_name"
                    android:id="@+id/textView"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_account_name"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_email"
                    android:id="@+id/textView2"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="center" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_account_email"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_solde"
                    android:id="@+id/textView3"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_account_solde"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_activated"
                    android:id="@+id/textView4"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_account_activated"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deconnexion"
            android:id="@+id/button"
            android:layout_gravity="center"
            style="@style/button" />
    </FrameLayout>
</FrameLayout>
