<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="bbqcreations.drinkiit.LoginFragment"
    android:orientation="vertical"
    android:background="@drawable/bg_image">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/ll_login"
        android:weightSum="7"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                style="@style/title"
                android:text="@string/title_login"
                android:id="@+id/title_login" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_top"
            android:layout_weight="6"
            android:layout_marginTop="10sp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/txt_email"
                android:layout_gravity="center"
                android:text="jonathan@hurter.fr" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txt_passwd"
                android:layout_gravity="center"
                android:layout_marginTop="50sp"
                android:text="5HEBTvzX" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_remember_passwd"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/remember_me" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <Button
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/btn_submit_form"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="20sp"
                android:onClick="httprequest"
                android:nestedScrollingEnabled="false" />
        </FrameLayout>

     </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/ll_loading"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:id="@+id/pb_login"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connecting"
            android:layout_marginTop="50sp" />

    </LinearLayout>

</LinearLayout>





