<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_margin="5sp"
        android:background="@drawable/full_border"
        android:id="@+id/ll_product"
        android:visibility="visible">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/txt_product_name"
            android:textSize="20sp"
            android:background="#ffc5d2d6"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:gravity="center"
            android:textColor="#ff69210e" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/txt_product_description"
            android:textColor="#ffffffff"
            android:background="#ffc95743"
            android:paddingLeft="10sp"
            android:textSize="15sp"
            android:paddingRight="10sp"
            android:gravity="center" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:id="@+id/txt_product_price"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="2"
        android:id="@+id/ll_product_clicked"
        android:background="@drawable/full_border"
        android:layout_margin="5sp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:background="#ffffffff">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/edtxt_order_comment"
                android:layout_weight="2"
                android:hint="@string/comment" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtxt_order_qty"
                android:layout_weight="3"
                android:hint="qté"
                android:text="1"/>

        </LinearLayout>





        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:background="#ffc95743"
            android:paddingBottom="5sp"
            android:paddingTop="5sp">

            <Button
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:id="@+id/btn_order_add" />

            <Button
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:id="@+id/btn_order_cancel" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>

