<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_margin="5sp"
        android:background="@drawable/full_border"
        android:id="@+id/ll_product">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/txt_product_name"
            android:textSize="20sp"
            android:background="#ffc5d2d6"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:gravity="center"
            android:textColor="#ff69210e"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/txt_product_description"
            android:textColor="#ffffffff"
            android:background="#ffc95743"
            android:paddingLeft="10sp"
            android:textSize="15sp"
            android:paddingRight="10sp"
            android:gravity="center" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:id="@+id/txt_product_price"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:id="@+id/ll_product_clicked"
        android:background="@drawable/full_border"
        android:layout_margin="5sp"
        android:transitionGroup="false"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:background="#ffffffff"
            android:weightSum="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/edtxt_order_comment"
                android:hint="@string/comment"
                android:layout_weight="3.5"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:clickable="true"
                android:onClick="updateQty"
                android:id="@+id/txt_order_increase"
                android:text="+"
                android:layout_weight="0.7"
                android:gravity="center"
                android:background="@drawable/textview_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/txt_order_qty"
                android:hint="qté"
                android:text="1"
                android:gravity="center"
                android:layout_weight="0.1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/txt_order_decrease"
                android:clickable="true"
                android:onClick="updateQty"
                android:text="-"
                android:layout_weight="0.7"
                android:gravity="center"
                android:background="@drawable/textview_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:background="#ffc95743"
            android:paddingBottom="5sp"
            android:paddingTop="5sp">

            <Button
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:id="@+id/btn_order_add" />

            <Button
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:id="@+id/btn_order_cancel" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>

