<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="bbqcreations.drinkiit.AccueilFragment"
    android:orientation="vertical"
    android:background="@drawable/bg_image"
    android:weightSum="7">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/title_accueil"
            android:id="@+id/textView5"
            android:layout_gravity="center"
            style="@style/title" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:layout_marginTop="10sp"
        android:orientation="vertical"
        android:background="@drawable/border_top">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:weightSum="2"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:id="@+id/textView6"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_accueil_name"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#2980b9" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="4"
            android:weightSum="4"
            android:background="#E33A1707">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:layout_weight="1"
                android:text="D R I N K I I T"
                android:textStyle="bold"
                android:textSize="30sp"
                android:background="@drawable/border_red" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="SODAS"
                    android:id="@+id/textView8"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/border_red"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="SNACKS"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:background="@drawable/border_red"
                    android:gravity="center"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="P A N I N I S"
                    android:id="@+id/textView10"
                    android:layout_weight="1"
                    android:background="@drawable/border_red"
                    android:gravity="center"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:paddingRight="1sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="SANDWICHS"
                    android:id="@+id/textView11"
                    android:layout_weight="1"
                    android:background="@drawable/border_red"
                    android:gravity="center"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_accueil_connexion"
            style="@style/button"
            android:gravity="center"
            android:text="@string/title_login"
            android:layout_gravity="center"
            android:onClick="goTo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_accueil_commander"
            style="@style/button"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/title_order"
            android:layout_gravity="center"
            android:onClick="goTo"/>

    </FrameLayout>

</LinearLayout>
